proxmox-talos/apps/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  annotations:
    homelab/sync-bump: "2026-02-09"
  labels:
    name: homepage
